--- a/src/app/bonds/components/bond-form/bond-form.html
+++ b/src/app/bonds/components/bond-form/bond-form.html
@@ -27,10 +27,11 @@
                 <div class="bond-form-field-wrapper">
                   <mat-form-field appearance="outline" class="bond-form-field">
                     <mat-label>Valor nominal</mat-label>
-                    <input matInput type="number" formControlName="nominal_value" min="0" step="0.01" placeholder="10000" />
+                    <input matInput type="number" formControlName="nominal_value" min="1000" max="10000" placeholder="10000" />
                     <mat-error *ngIf="nominalValueInvalid && nominalValueTouched">
                       <span *ngIf="nominal_value?.errors?.['required']">El valor nominal es requerido</span>
-                      <span *ngIf="nominal_value?.errors?.['min']">El valor debe ser mayor a 0</span>
+                      <span *ngIf="nominal_value?.errors?.['min']">El valor debe ser mayor a 1000</span>
+                      <span *ngIf="nominal_value?.errors?.['max']">El valor debe ser menor a 10000</span>
                     </mat-error>
                   </mat-form-field>
                 </div>
@@ -41,7 +42,7 @@
                 <div class="bond-form-field-wrapper">
                   <mat-form-field appearance="outline" class="bond-form-field">
                     <mat-label>Fecha de emisión</mat-label>
-                    <input matInput [matDatepicker]="pickerIssue" formControlName="issue_date" placeholder="Selecciona fecha" />
+                    <input matInput [matDatepicker]="pickerIssue" formControlName="issue_date" [disabled]="true" placeholder="Selecciona fecha" />
                     <mat-datepicker-toggle matSuffix [for]="pickerIssue"></mat-datepicker-toggle>
                     <mat-datepicker #pickerIssue></mat-datepicker>
                     <mat-error *ngIf="bondForm.get('issue_date')?.invalid && bondForm.get('issue_date')?.touched">
@@ -60,6 +61,9 @@
                     </mat-error>
                   </mat-form-field>
                 </div>
+                <mat-error *ngIf="bondForm.errors?.['termOutOfRange']">
+                  El plazo del bono debe ser entre 1 y 15 años.
+                </mat-error>
               </div>
             </div>
 
@@ -70,10 +74,11 @@
                 <div class="bond-form-field-wrapper">
                   <mat-form-field appearance="outline" class="bond-form-field">
                     <mat-label>Tasa de interés (%)</mat-label>
-                    <input matInput type="number" formControlName="interest_rate" min="0" step="0.01" placeholder="5.5" />
+                    <input matInput type="number" formControlName="interest_rate" min="2" max="15" placeholder="15" />
                     <mat-error *ngIf="interestRateInvalid && interestRateTouched">
                       <span *ngIf="interest_rate?.errors?.['required']">La tasa de interés es requerida</span>
-                      <span *ngIf="interest_rate?.errors?.['min']">La tasa debe ser mayor a 0</span>
+                      <span *ngIf="interest_rate?.errors?.['min']">La tasa debe ser mayor a 2%</span>
+                      <span *ngIf="interest_rate?.errors?.['max']">La tasa debe ser mayor a 15%</span>
                     </mat-error>
                   </mat-form-field>
                 </div>
@@ -145,10 +150,10 @@
                 <div class="bond-form-field-wrapper" *ngIf="bondForm.get('grace_type')?.value === 'PARTIAL' || bondForm.get('grace_type')?.value === 'TOTAL'">
                   <mat-form-field appearance="outline" class="bond-form-field">
                     <mat-label>Numero de periodos de gracia</mat-label>
-                    <input matInput type="number" formControlName="grace_period" min="0" placeholder="0" />
+                    <input matInput type="number" formControlName="grace_period" min="1" max="3" placeholder="3" />
                     <mat-error *ngIf="gracePeriodInvalid && gracePeriodTouched">
                       <span *ngIf="grace_period?.errors?.['required']">El período de gracia es requerido</span>
-                      <span *ngIf="grace_period?.errors?.['min']">El período debe ser 0 o mayor</span>
+                      <span *ngIf="grace_period?.errors?.['min']">El período debe entre 1-3</span>
                     </mat-error>
                   </mat-form-field>
                 </div>
@@ -164,9 +169,10 @@
                 </div>
 
                 <div class="bond-form-field-wrapper">
+
                   <mat-form-field appearance="outline" class="bond-form-field">
                     <mat-label>Gastos de colocación (0.5%)</mat-label>
-                    <input matInput type="number" formControlName="placement_expenses" readonly />
+                    <input matInput type="number" formControlName="placement_expenses" readonly/>
                   </mat-form-field>
                 </div>
 
@@ -179,7 +185,7 @@
 
                 <div class="bond-form-field-wrapper">
                   <mat-form-field appearance="outline" class="bond-form-field">
-                    <mat-label>Gastos Cavali (0.2%)</mat-label>
+                    <mat-label>Gastos Cavali (0.15%)</mat-label>
                     <input matInput type="number" formControlName="cavali_expenses" readonly />
                   </mat-form-field>
                 </div>
